fixed layout issue

--- a/src/containers/Favorites.css
+++ b/src/containers/Favorites.css
@@ -5,7 +5,7 @@
   text-align: center;
   align-content: center;
   background-color: #ffffff;
-  margin-top: 7em;
+  margin-top: 2.5em;
   min-width: 100vw;
 }
 
